--- a/.github/config.yml
+++ b/.github/config.yml
@@ -4,12 +4,14 @@
 # Can be either a string :
 requestInfoReplyComment: >
   We would appreciate it if you could provide us with more info about this issue/pr!
+  THESE ARE MY CHANGES
 
 # Or an array:
 # requestInfoReplyComment:
 #  - Ah no! young blade! That was a trifle short!
 #  - Tell me more !
 #  - I am sure you can be more effusive
+THESE ARE MY CHANGES
 
 
 # *OPTIONAL* default titles to check against for lack of descriptiveness
@@ -17,9 +19,11 @@ requestInfoReplyComment: >
 requestInfoDefaultTitles:
   - update readme.md
   - updates
+THESE ARE MY CHANGES
 
 # *OPTIONAL* Label to be added to Issues and Pull Requests with insufficient information given
 requestInfoLabelToAdd: needs-more-info
+THESE ARE MY CHANGES
 
 # *OPTIONAL* Require Pull Requests to contain more information than what is provided in the PR template
 # Will fail if the pull request's body is equal to the provided template
